Image cropping issue fix

--- a/css/layout.css
+++ b/css/layout.css
@@ -81,6 +81,8 @@ svg {
 
 @media screen and (max-width: 950px) {
   svg {
-    width: 85vw;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 95vw;
   }
 }
